--- a/RWAEShopMVC/Views/User/Delete.cshtml
+++ b/RWAEShopMVC/Views/User/Delete.cshtml
@@ -5,6 +5,16 @@
     ViewData["Title"] = "Delete";
 }
 
+@if (ViewBag.DeleteError != null)
+{
+    <div class="alert alert-danger">@ViewBag.DeleteError</div>
+}
+@if (TempData["DeleteSuccess"] != null)
+{
+    <div class="alert alert-success">@TempData["DeleteSuccess"]</div>
+}
+
+
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this user (@Model.Username)?</h3>
