--- a/RWAEShopWebApp/Views/Shared/_Layout.cshtml
+++ b/RWAEShopWebApp/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="Index">Countries</a>
                             </li>
                             <li class="nav-item"><a class="nav-link text-dark" asp-controller="User" asp-action="Index">Users</a></li>
+                            <li class="nav-item"><a class="nav-link" asp-controller="Log" asp-action="Index">Logs</a></li>
                         }
                         else if (isLoggedIn && role == "User")
                         {
