--- a/RWAEShopWebApp/Views/Product/Delete.cshtml
+++ b/RWAEShopWebApp/Views/Product/Delete.cshtml
@@ -47,7 +47,7 @@
                 </tbody>
             </table>
 
-            <form asp-action="Delete">
+            <form asp-action="Delete" id="deleteForm" method="post">
                 <input type="hidden" asp-for="IdProduct" />
                 <div class="d-flex align-items-center">
                     <button type="submit" class="btn btn-danger btn-lg fw-bold px-4 me-3">
@@ -60,6 +60,55 @@
     </div>
 </div>
 
-<!-- Bootstrap Icons CDN (dodaj u _Layout ako nemaš) -->
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 
+<!-- Modal for confirmation for delete IsAny ProductInOrder -->
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalLabel">Product is in orders</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        This product exists in at least one order. Are you sure you want to delete it?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Yes, Delete</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#deleteForm').on('submit', function (e) {
+                e.preventDefault();
+
+                var productId = @Model.IdProduct;
+
+                $.get('/Product/CheckProductInOrder', { id: productId }, function (data) {
+                    if (data.inOrder) {
+                        // send modal if product is in Order
+                        var modal = new bootstrap.Modal(document.getElementById('confirmDeleteModal'));
+                        modal.show();
+
+                        // Admin when confirm send form
+                        $('#confirmDeleteBtn').off('click').on('click', function () {
+                            modal.hide();
+                            $('#deleteForm')[0].submit();
+                        });
+                    } else {
+                        // else send right away form
+                        $('#deleteForm')[0].submit();
+                    }
+                });
+            });
+        });
+    </script>
+}
